# eml-framework

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  REVISION_SUMMARY.md  pyproject.toml  requirements-dev.txt  requirements.txt
experiments/: __init__.py  benchmarks.py  complexity_analysis.py  depth_size_analysis.py  domain_ablation.py  domain_validation_showcase.py  run_all.py  symbolic_regression.py  validate_numeric.py
notebooks/: demo.ipynb
paper/: eml_representation_study.aux  eml_representation_study.out  eml_representation_study.tex  eml_representation_study_aicta2026.tex  generate_aicta_figures.py  generate_figures.py
src/: __init__.py
src/eml/: __init__.py  config.py  core.py  exceptions.py  logging_config.py  schrodinger.py  transform.py  validation.py
tests/: __init__.py  conftest.py  test_core.py  test_symbolic_regression.py  test_transform.py  test_validation.py
